dist_man1_MANS=

if BUILD_POCKETCOIND
  dist_man1_MANS+=pocketcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=pocketcoin-qt.1
endif

if BUILD_POCKETCOIN_CLI
  dist_man1_MANS+=pocketcoin-cli.1
endif

if BUILD_POCKETCOIN_TX
  dist_man1_MANS+=pocketcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_POCKETCOIN_WALLET
  dist_man1_MANS+=pocketcoin-wallet.1
endif
endif
